fixed landing page and nav

--- a/index.html
+++ b/index.html
@@ -15,33 +15,32 @@
             <div class="bar half start"></div>
             <div class="bar"></div>
             <div class="bar half end"></div>
-
-            <nav class="top-nav">
-                <ul class="nav-list">
-                    <li>
-                        <a href="index.html" class="nav-link">Home</a>
-                    </li>
-                    <li>
-                        <a href="index.html" class="nav-link">About</a>
-                    </li>
-                    <li>
-                        <a href="index.html" class="nav-link">Services</a>
-                    </li>
-                    <li>
-                        <a href="index.html" class="nav-link">Portfolio</a>
-                    </li>
-                    <li>
-                        <a href="index.html" class="nav-link">Experience</a>
-                    </li>
-                    <li>
-                        <a href="index.html" class="nav-link">Contact</a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="landing text">
-                <h1>Rosie Ellis</h1>
-                <h6>UI | UX Designer and Web Developer</h6>
-            </div>
+        </div>
+        <nav class="top-nav">
+            <ul class="nav-list">
+                <li>
+                    <a href="index.html" class="nav-link">Home</a>
+                </li>
+                <li>
+                    <a href="index.html" class="nav-link">About</a>
+                </li>
+                <li>
+                    <a href="index.html" class="nav-link">Services</a>
+                </li>
+                <li>
+                    <a href="index.html" class="nav-link">Portfolio</a>
+                </li>
+                <li>
+                    <a href="index.html" class="nav-link">Experience</a>
+                </li>
+                <li>
+                    <a href="index.html" class="nav-link">Contact</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="landing-text">
+            <h1>Rosie Ellis</h1>
+            <h6>UI | UX Designer and Web Developer</h6>
         </div>
     </header>
 
